--- a/package.json
+++ b/package.json
@@ -1,41 +1,23 @@
-
 {
   "name": "organized-ai",
-  "version": "0.1.0",
-  "description": "A TypeScript client for the Model Context Protocol with multiple server support",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "test": "jest",
-    "lint": "eslint src --ext .ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "organized-ai",
-    "mcp",
-    "model-context-protocol",
-    "ai",
-    "client"
-  ],
+  "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "axios": "^1.6.7",
-    "dotenv": "^16.4.1",
-    "inquirer": "^8.2.5",
-    "uuid": "^9.0.1"
+    "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/inquirer": "^8.2.5",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^18.18.0",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^22.13.9",
+    "@types/uuid": "^10.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
